--- a/modules/dreamview/frontend/src/styles/main.scss
+++ b/modules/dreamview/frontend/src/styles/main.scss
@@ -64,15 +64,16 @@ body {
     }
 
     .button {
-        height: 50px;
-        width: 250px;
+        opacity: 0.6;
+        height: 60px;
+        width: 260px;
         border: none;
         padding: 20px;
         display: block;
-        font-size: 15px;
+        font-size: 14px;
         text-align: left;
         color: #FFFFFF;
-        background-color: rgba(0, 0, 0, 0.6);
+        background-color: #000000;
     }
 
     .button:focus {
@@ -93,9 +94,9 @@ body {
 
     .separator {
         display: block;
-        height: 2px;
+        height: 1px;
         border: 0;
-        border-top:1px solid #38546d;
+        border-top: 1px solid rgba(255, 255, 255, 0.1);
         padding: 0;
     }
 
@@ -104,7 +105,7 @@ body {
         border: none;
         margin: 0px;
         padding: 0px;
-        width: 250px;
+        width: 260px;
         height: 300px;
         overflow: scroll;
         overflow-x: hidden;
@@ -116,35 +117,41 @@ body {
 
     .nav-side-menu {
         overflow: auto;
-        background-color: rgba(74, 5, 24, 0.3);
-        opacity: 0.7;
-        width: 250px;
+        background-color: #000000;
+        opacity: 0.4;
+        width: 260px;
         height: 250px;
         font-size: 14px;
-        color: #ffffff;
+        color: #FFFFFF;
         text-align: left;
         z-index: 10 !important;
 
         details {
             summary {
-                line-height: 40px;
-                border-bottom: 1px solid #23282E;
+                line-height: 50px;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.1);
             
                 img {
                     position: relative;
-                    transform: translate(30%, 30%);
+                    transform: translate(70%, 30%);
+                    width: 30px;
+                    height: 30px;
                 }
                     
                 span {
-                    padding-left: 10px;
+                    padding-left: 35px;
                 }
             }
             
             summary::-webkit-details-marker {
                 float: right;
-                padding-top: 15px;
+                padding-top: 22px;
                 padding-right: 10px;
             }
+        }
+
+        details[open] {
+            background-color: #002848;
         }
         
         ul {
@@ -152,27 +159,30 @@ body {
             padding-left: 0px;
             margin: 0;
             cursor: pointer;
+            font-size: 12px;
+            background-color: #000F23;
             
             li {
-                line-height: 30px;
-                border-bottom: 1px solid #23282E;
+                line-height: 40px;
+                border-bottom: 1px solid rgba(255, 255, 255, 0.1);
                 padding-left: 6px;
                 margin-left: 0;
                     
                 span {
-                    padding-left: 2px;
+                    padding-left: 20px;
                 }
             }
                 
             li:hover {
-                background-color: #4F5B69;
+                background-color: #000000;
             }
         }
 
         // Toggle switch
         .switch {
             position: relative;
-            width: 30px;
+            transform: translate(35%, 25%);
+            width: 40px;
             display: inline-block;
         }
         
@@ -184,40 +194,47 @@ body {
             display: block;
             overflow: hidden;
             cursor: pointer;
-            height: 12px;
+            height: 20px;
             padding: 0;
-            line-height: 12px;
-            border: 2px solid #E3E3E3;
-            border-radius: 12px;
+            line-height: 20px;
+            border: 0px;
+            border-radius: 16px;
+            background-color: #3F4548;
             transition: background-color 0.2s ease-in;
         }
         
         .toggle-switch-label:before {
             content: "";
             display: block;
-            width: 12px;
-            margin: 0px;
-            background: #FFFFFF;
+            width: 16px;
+            margin: 2px;
+            background: #A0A0A0;
             position: absolute;
             top: 0;
             bottom: 0;
-            right: 16px;
-            border: 2px solid #E3E3E3;
-            border-radius: 12px;
+            right: 20px;
+            border-radius: 16px;
             transition: all 0.2s ease-in;
         }
         
         .toggle-switch:checked + .toggle-switch-label {
-            background-color: #3E8DC8;
+            background-color: #0E3D62;
         }
         
         .toggle-switch:checked + .toggle-switch-label,
         .toggle-switch:checked + .toggle-switch-label:before {
-            border-color: #3E8DC8;
+            border-color: #0E3D62;
         }
         
         .toggle-switch:checked + .toggle-switch-label:before {
             right: 0px;
+            background-color: #30A5FF;
+        }
+
+        input[type="radio"] {
+            position: relative;
+            transform: scale(1.5) translate(75%, 20%);
+            display: inline-block;
         }
         
         // Radio button (not in use)
@@ -276,16 +293,18 @@ body {
 
 // Adjust the scrollbar style.
 ::-webkit-scrollbar {
-    width: 5px;
-    background-color: #F5F5F5;
+    width: 4px;
+    opacity: 0.3;
+    background-color: #FFFFFF;
 }
 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: #555555;
 }
 
 ::-webkit-scrollbar-thumb {
+    opacity: 0.8;
     background-color: #30A5FF;
 }
 
